--- a/Figure_clusterProfiler_nes.Rmd
+++ b/Figure_clusterProfiler_nes.Rmd
@@ -40,6 +40,7 @@ library(enrichplot)
 fileName <- "results/DEGs_C231_CRISPR1_vs_231_noCRISPR_hg38.xlsx"
 logFC    <- TRUE      # Are we using column 3: "logFC" or 6: "PValue"?
 # Analysis settings
+p_adj_cutoff   <- 0.2 # FDR cutoff
 analysis_name  = "Analysis1" # Analysis name, to prefix file names for figures
 max_kegg_genes = 2000 # Maximum number of genes to run enrichment analysis on
 max_GO_to_plot = 12   # Maximum number of GOs to plot
@@ -119,7 +120,7 @@ ego3 <-   gseGO(geneList     = geneList.all,
                 OrgDb        = org_db,
                 nPerm        = nperm,
                 minGSSize    = 10,
-                pvalueCutoff = 0.1,
+                pvalueCutoff = p_adj_cutoff,
                 verbose      = FALSE)
 ego3.summary <- as.data.frame(ego3)
 ```
@@ -139,7 +140,7 @@ if (nrow(ego3.summary) > 0) {
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
     labs(y = "Normalized Enrichment Score")
-  ggsave(filename = paste0(analysis_name, "_GOMF_all.png"), width = 12, height = 3, units = "in")
+  # ggsave(filename = paste0(analysis_name, "_GOMF_all.png"), width = 12, height = 3, units = "in")
 }
 ```
 
@@ -173,14 +174,14 @@ ego3.up <-   gseGO(geneList  = geneList.up,
                 OrgDb        = org_db,
                 nPerm        = nperm,
                 minGSSize    = 10,
-                pvalueCutoff = 0.1,
+                pvalueCutoff = p_adj_cutoff,
                 verbose      = FALSE)
 ego3.dn <-   gseGO(geneList  = geneList.dn,
                 ont          = "MF",
                 OrgDb        = org_db,
                 nPerm        = nperm,
                 minGSSize    = 10,
-                pvalueCutoff = 0.1,
+                pvalueCutoff = p_adj_cutoff,
                 verbose      = FALSE)
 
 ego3.up.summary <- as.data.frame(ego3.up)
@@ -201,7 +202,7 @@ if (nrow(ego3.up.summary) > 0) {
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
     labs(y = "Normalized Enrichment Score")
-  ggsave(filename = paste0(analysis_name, "_GOMF_up.png"), width = 12, height = 3, units = "in")
+  # ggsave(filename = paste0(analysis_name, "_GOMF_up.png"), width = 12, height = 3, units = "in")
 }
 ```
 
@@ -242,7 +243,7 @@ if (nrow(ego3.dn.summary) > 0) {
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
     labs(y = "Normalized Enrichment Score")
-  ggsave(filename = paste0(analysis_name, "_GOMF_dn.png"), width = 12, height = 3, units = "in")
+  # ggsave(filename = paste0(analysis_name, "_GOMF_dn.png"), width = 12, height = 3, units = "in")
 }
 ```
 
@@ -276,7 +277,7 @@ ego3 <-   gseGO(geneList     = geneList.all,
                 OrgDb        = org_db,
                 nPerm        = nperm,
                 minGSSize    = 10,
-                pvalueCutoff = 0.1,
+                pvalueCutoff = p_adj_cutoff,
                 verbose      = FALSE)
 ego3.summary <- as.data.frame(ego3)
 # Proceed to plotting, if enrichments are available
@@ -293,7 +294,7 @@ if (nrow(ego3.summary) > 0) {
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
     labs(y = "Normalized Enrichment Score")
-  ggsave(filename = paste0(analysis_name, "_GOBP_all.png"), width = 12, height = 3, units = "in")
+  # ggsave(filename = paste0(analysis_name, "_GOBP_all.png"), width = 12, height = 3, units = "in")
 }
 ```
 
@@ -327,14 +328,14 @@ ego3.up <-   gseGO(geneList  = geneList.up,
                 OrgDb        = org_db,
                 nPerm        = nperm,
                 minGSSize    = 10,
-                pvalueCutoff = 0.1,
+                pvalueCutoff = p_adj_cutoff,
                 verbose      = FALSE)
 ego3.dn <-   gseGO(geneList  = geneList.dn,
                 ont          = "BP",
                 OrgDb        = org_db,
                 nPerm        = nperm,
                 minGSSize    = 10,
-                pvalueCutoff = 0.1,
+                pvalueCutoff = p_adj_cutoff,
                 verbose      = FALSE)
 
 ego3.up.summary <- as.data.frame(ego3.up)
@@ -355,7 +356,7 @@ if (nrow(ego3.up.summary) > 0) {
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
     labs(y = "Normalized Enrichment Score")
-  ggsave(filename = paste0(analysis_name, "_GOBP_up.png"), width = 12, height = 3, units = "in")
+  # ggsave(filename = paste0(analysis_name, "_GOBP_up.png"), width = 12, height = 3, units = "in")
 }
 ```
 
@@ -396,7 +397,7 @@ if (nrow(ego3.dn.summary) > 0) {
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
     labs(y = "Normalized Enrichment Score")
-  ggsave(filename = paste0(analysis_name, "_GOBP_dn.png"), width = 12, height = 3, units = "in")
+  # ggsave(filename = paste0(analysis_name, "_GOBP_dn.png"), width = 12, height = 3, units = "in")
 }
 ```
 
@@ -432,7 +433,7 @@ ego3 <-   gseGO(geneList     = geneList.all,
                 OrgDb        = org_db,
                 nPerm        = nperm,
                 minGSSize    = 10,
-                pvalueCutoff = 0.1,
+                pvalueCutoff = p_adj_cutoff,
                 verbose      = FALSE)
 ego3.summary <- as.data.frame(ego3)
 # Proceed to plotting, if enrichments are available
@@ -449,7 +450,7 @@ if (nrow(ego3.summary) > 0) {
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
     labs(y = "Normalized Enrichment Score")
-  ggsave(filename = paste0(analysis_name, "_GOCC_all.png"), width = 12, height = 3, units = "in")
+  # ggsave(filename = paste0(analysis_name, "_GOCC_all.png"), width = 12, height = 3, units = "in")
 }
 ```
 
@@ -483,14 +484,14 @@ ego3.up <-   gseGO(geneList  = geneList.up,
                 OrgDb        = org_db,
                 nPerm        = nperm,
                 minGSSize    = 10,
-                pvalueCutoff = 0.1,
+                pvalueCutoff = p_adj_cutoff,
                 verbose      = FALSE)
 ego3.dn <-   gseGO(geneList  = geneList.dn,
                 ont          = "CC",
                 OrgDb        = org_db,
                 nPerm        = nperm,
                 minGSSize    = 10,
-                pvalueCutoff = 0.1,
+                pvalueCutoff = p_adj_cutoff,
                 verbose      = FALSE)
 
 ego3.up.summary <- as.data.frame(ego3.up)
@@ -511,7 +512,7 @@ if (nrow(ego3.up.summary) > 0) {
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
     labs(y = "Normalized Enrichment Score")
-  ggsave(filename = paste0(analysis_name, "_GOCC_up.png"), width = 12, height = 3, units = "in")
+  # ggsave(filename = paste0(analysis_name, "_GOCC_up.png"), width = 12, height = 3, units = "in")
 }
 ```
 
@@ -552,7 +553,7 @@ if (nrow(ego3.dn.summary) > 0) {
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
     labs(y = "Normalized Enrichment Score")
-  ggsave(filename = paste0(analysis_name, "_GOCC_dn.png"), width = 12, height = 3, units = "in")
+  # ggsave(filename = paste0(analysis_name, "_GOCC_dn.png"), width = 12, height = 3, units = "in")
 }
 ```
 
@@ -586,7 +587,7 @@ ego3 <-   gseKEGG(geneList     = geneList.all,
                   keyType      = "kegg",
                   nPerm        = nperm,
                   minGSSize    = 10,
-                  pvalueCutoff = 0.1,
+                  pvalueCutoff = p_adj_cutoff,
                   verbose      = FALSE)
 ego3.summary <- as.data.frame(ego3)
 # Proceed to plotting, if enrichments are available
@@ -603,7 +604,7 @@ if (nrow(ego3.summary) > 0) {
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
     labs(y = "Normalized Enrichment Score")
-  ggsave(filename = paste0(analysis_name, "_KEGG_all.png"), width = 12, height = 3, units = "in")
+  # ggsave(filename = paste0(analysis_name, "_KEGG_all.png"), width = 12, height = 3, units = "in")
 }
 ```
 
@@ -637,14 +638,14 @@ ego3.up <-gseKEGG(geneList     = geneList.up,
                   keyType      = "kegg",
                   nPerm        = nperm,
                   minGSSize    = 10,
-                  pvalueCutoff = 0.1,
+                  pvalueCutoff = p_adj_cutoff,
                   verbose      = FALSE)
 ego3.dn <-gseKEGG(geneList     = geneList.dn,
                   organism     = org_kegg,
                   keyType      = "kegg",
                   nPerm        = nperm,
                   minGSSize    = 10,
-                  pvalueCutoff = 0.1,
+                  pvalueCutoff = p_adj_cutoff,
                   verbose      = FALSE)
 
 ego3.up.summary <- as.data.frame(ego3.up)
@@ -665,7 +666,7 @@ if (nrow(ego3.up.summary) > 0) {
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
     labs(y = "Normalized Enrichment Score")
-  ggsave(filename = paste0(analysis_name, "_KEGG_up.png"), width = 12, height = 3, units = "in")
+  # ggsave(filename = paste0(analysis_name, "_KEGG_up.png"), width = 12, height = 3, units = "in")
 }
 ```
 
@@ -706,7 +707,7 @@ if (nrow(ego3.dn.summary) > 0) {
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
     labs(y = "Normalized Enrichment Score")
-  ggsave(filename = paste0(analysis_name, "_KEGG_dn.png"), width = 12, height = 3, units = "in")
+  # ggsave(filename = paste0(analysis_name, "_KEGG_dn.png"), width = 12, height = 3, units = "in")
 }
 ```
 
